# py-algo-web-service

./: .env.example  .gitignore  .render_disk_placeholder_DO_NOT_DELETE  README-PATCH.txt  README.md  app.py  config.yaml  pyproject.toml  render.yaml  report_builder.py  requirements.txt
src/: main.py  run_now.py
src/data/: fetch_ccxt.py  fetch_yahoo.py
templates/: admin.html  index.html
