[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "py-algo-web-service"
version = "0.1.0"
description = "FastAPI web service to receive and serve HTML reports and trigger on-demand runs."
authors = [{name="Marcelo Martini"}]
requires-python = ">=3.11"
